--- a/test.css
+++ b/test.css
@@ -1,14 +1,17 @@
-body {
-    background: linear-gradient(to bottom, #ADD8E6, #87CEFA);
-    max-width:100vw;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
-  }
-
+*{
+  margin: 0;
+  padding: 0;
+}
+.landing{
+  background: linear-gradient(to bottom, #ADD8E6, #87CEFA);
+  max-width:100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
   .cloud {
     position: relative;
     /* width: 200px; */
@@ -28,7 +31,7 @@ body {
   .cloudsSecond{
     width:50%;
     height: auto;
-    background-color: coral;
+    /* background-color: coral; */
     position: absolute;
     top: 40%;
     /* left:-% */
@@ -42,10 +45,7 @@ body {
     position: absolute;
     animation: move-left 3s ease-in-out forwards;
   }
-#flip{
-  transform: rotateY(180deg);
 
-}
   .cloudTwo {
     position: absolute;
     animation: move-right 3s ease-in-out forwards;
@@ -55,7 +55,7 @@ body {
     width: 100px;
     height: 100px;
     /* background: #fff; */
-    background-image: url('./Moon.png');
+    background-size: cover;
     border-radius: 50%;
     animation: pop-up 3s ease-in-out forwards;
     opacity: 0;
@@ -63,6 +63,10 @@ body {
     justify-content: center;
     align-items: center;
     border-radius: 1px solid ;
+  }
+  .circle img{
+    width: 300%;
+    height: auto;
   }
 
   @keyframes move-left {
