--- a/test.css
+++ b/test.css
@@ -1,7 +1,3 @@
-*{
-  margin: 0;
-  padding: 0;
-}
 .landing{
   background: linear-gradient(to bottom, #ADD8E6, #87CEFA);
   max-width:100vw;
@@ -10,6 +6,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  position: relative;
   overflow: hidden;
 }
   .cloud {
